<resources>
    <string name="app_name">Task Timer</string>
    <string name="action_settings">Settings</string>
    <string name="menu_title_add_task">Add Task</string>
    <string name="menu_main_show_duration">Duration Report</string>
    <string name="men_main_settings">Settings</string>
    <string name="menu_main_show_about">About TaskTimer</string>
    <string name="menu_main_generate">Generate data</string>
    <string name="no_task_message">No Task Selected</string>
    <string name="edit_description">Button to Edit task details</string>
    <string name="delete_button_description">button to delete task</string>
    <string name="addedit_name">Name</string>
    <string name="addedit_description">Description</string>
    <string name="addedit_sortorder">SortOrder</string>
    <string name="addedit_save_button_text">Save</string>
    <string name="title_activity_add_edit">AddEditActivity</string>
    <string name="default_row_name">Instructions</string>
    <string name="default_description_row">use the add button (+) to create tasks
        \n\n Tasks with lower sort order will be placed first.
        \n\n tapping a task will start the timer
        \n\n each task has edit button to change the content</string>
    <string name="ok">OK</string>
    <string name="cancel">CANCEL</string>
    <string name="deldialog_positive_caption">Delete</string>
    <string name="deldialog_message">Deleting will also delete all timing data with task id %1$d: %2$s.</string>
    <string name="cancelEditDialog_message">You have unsaved changes, do you want to leave and discard the changes or continue editing?</string>
    <string name="cancelEditDialog_positive_caption">Continue editing</string>
    <string name="cancelEditDialog_negative_caption">Abandon changes</string>
    <string name="about_copyright">Copyright \u00a9 2017 LearnProgramming academy</string>
    <string name="about_weblink">Instructions available www.learnprogramming.academy</string>
    <string name="about_weblink_v16">Instructions available </string>
    <string name="weblink_clickable_v16"><u>http://www.learnprogramming.academy</u></string>
    <string name="about_email">For support email taskTimer@learnprogramming.academy</string>
    <string name="about_credits">icon derived from <b>analog clock</b> at openclipart.com by <b> anonymous</b></string>
</resources>
