<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.example.roy.tasktimer.MainActivity">
    <item
        android:id="@+id/menumain_addTask"
        android:enabled="true"
        android:icon="@android:drawable/ic_menu_add"
        android:orderInCategory="100"
        android:title="@string/menu_title_add_task"
        android:visible="true"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/manumain_showDuration"
        android:enabled="true"
        android:icon="@android:drawable/ic_menu_view"
        android:orderInCategory="101"
        android:title="@string/menu_main_show_duration"
        android:visible="true"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/manumain_settings"
        android:enabled="true"
        android:orderInCategory="102"
        android:title="@string/men_main_settings"
        android:visible="true"
        app:showAsAction="never" />
    <item
        android:id="@+id/menumain_showAbout"
        android:checkable="false"
        android:enabled="true"
        android:icon="@android:drawable/ic_menu_info_details"
        android:orderInCategory="103"
        android:title="@string/menu_main_show_about"
        android:visible="true"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/manumain_generate"
        android:checkable="true"
        android:enabled="true"
        android:orderInCategory="104"
        android:title="@string/menu_main_generate"
        android:visible="false"
        app:showAsAction="never" />
</menu>
